--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "cca-frontend",
-  "description": "A Volto-powered Plone frontend",
+  "description": "CCA frontend (Plone 4)",
   "license": "MIT",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
+    "patches": "/bin/bash patches/patchit.sh > /dev/null 2>&1 ||true",
     "build": "razzle build --noninteractive",
     "lint": "./node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx}'",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --max-warnings=0 --fix 'src/**/*.{js,jsx}'",
@@ -17,20 +18,46 @@
     "stylelint:overrides": "stylelint 'theme/**/*.overrides' 'src/**/*.overrides'",
     "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
     "test": "razzle test --passWithNoTests",
-    "cypress:open": "make test-acceptance",
-    "cypress:run": "test-acceptance-headless",
+    "cypress:run": "NODE_ENV=test cypress run",
+    "cypress:open": "NODE_ENV=test cypress open",
+    "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
+    "cypress:test-acceptance-server": "make test-acceptance-server",
+    "cy:test:fixture:setup": "node cypress/support/reset-fixture.js",
+    "cy:test:fixture:teardown": "node cypress/support/reset-fixture.js teardown",
+    "ci:start-backend": "make start-test-backend",
+    "ci:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn build && start-test start:prod http-get://localhost:3000 cypress:run",
+    "ci:cypress:run": "start-test ci:start-backend http-get://localhost:55001/plone ci:start-frontend",
     "start:prod": "NODE_ENV=production node build/server.js",
     "i18n": "rm -rf build/messages && NODE_ENV=production i18n",
+    "develop:npx": "npx -p mrs-developer missdev --config=jsconfig.json --output=addons --fetch-https",
+    "develop": "missdev --config=jsconfig.json --output=addons --fetch-https",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "update": "make update",
+    "release": "make release",
+    "issues": "make issues",
+    "issues:all": "make issues-all",
+    "status": "make status",
+    "pull": "make pull"
   },
-  "addons": [],
+  "private": true,
+  "workspaces": [
+    "src/addons/*"
+  ],
+  "addons": [
+    "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-eea-design-system",
+    "@eeacms/volto-eea-cca-policy",
+    "volto-subsites"
+  ],
   "jest": {
     "modulePathIgnorePatterns": [
       "api"
     ],
     "transform": {
       "^.+\\.js(x)?$": "babel-jest",
+      "^.+\\.css$": "jest-css-modules",
+      "^.+\\.scss$": "jest-css-modules",
       "^.+\\.(png)$": "jest-file",
       "^.+\\.(jpg)$": "jest-file",
       "^.+\\.(svg)$": "./node_modules/@plone/volto/jest-svgsystem-transform.js"
@@ -39,16 +66,11 @@
       "/node_modules/(?!@plone/volto).+\\.js$"
     ],
     "moduleNameMapper": {
-      "@plone/volto/cypress/(.*)$": "<rootDir>/node_modules/@plone/volto/cypress/$1",
-      "@plone/volto/addon-registry": "<rootDir>/node_modules/@plone/volto/addon-registry",
-      "@plone/volto/webpack-plugins/webpack-less-plugin": "<rootDir>/node_modules/@plone/volto/webpack-plugins/webpack-less-plugin",
       "@plone/volto/babel": "<rootDir>/node_modules/@plone/volto/babel",
       "@plone/volto/(.*)$": "<rootDir>/node_modules/@plone/volto/src/$1",
       "load-volto-addons": "<rootDir>/node_modules/@plone/volto/jest-addons-loader.js",
       "@package/(.*)$": "<rootDir>/src/$1",
-      "@root/(.*)$": "<rootDir>/src/$1",
-      "~/(.*)$": "<rootDir>/src/$1",
-      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+      "~/(.*)$": "<rootDir>/src/$1"
     },
     "coverageThreshold": {
       "global": {
@@ -123,13 +145,19 @@
     "not dead"
   ],
   "engines": {
-    "node": "^14 || ^16"
+    "node": "^12 || ^14 || ^16"
+  },
+  "resolutions": {
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.5"
   },
   "dependencies": {
-    "@plone/volto": "16.3.0"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.5",
+    "@eeacms/volto-eea-kitkat": "10.2.0",
+    "@plone/volto": "16.3.0",
+    "volto-subsites": "4.0.0"
   },
   "devDependencies": {
-    "@plone/scripts": "^2.1.5",
+    "@plone/scripts": "^2.1.2",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
@@ -138,7 +166,7 @@
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
     "mrs-developer": "*",
-    "postcss": "8.4.13",
+    "postcss": "8.3.11",
     "prettier": "2.0.5",
     "razzle": "4.2.17",
     "stylelint": "14.0.1",
