--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
   "dependencies": {
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.5",
     "@eeacms/volto-eea-kitkat": "10.2.0",
+    "@eeacms/volto-eea-website-theme": "1.3.1",
     "@plone/volto": "16.3.0",
     "volto-subsites": "4.0.0"
   },
