--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,31 @@
 version: "3"
 
 services:
-  frontend:
-    # build: .
-    image: eeacms/eea-website-frontend:develop
-    ports:
-    - "${FRONTEND:-3000}:3000"
-    environment:
-      RAZZLE_INTERNAL_API_PATH: "http://backend:8080/Plone"
-      RAZZLE_DEV_PROXY_API_PATH: "http://backend:8080/Plone"
-    volumes:
-    - ./src/addons:/app/src/addons
-    depends_on:
-      - backend
+  # frontend:
+  #   # build: .
+  #   image: eeacms/eea-website-frontend:develop
+  #   ports:
+  #   - "${FRONTEND:-3000}:3000"
+  #   environment:
+  #     RAZZLE_INTERNAL_API_PATH: "http://backend:8080/Plone"
+  #     RAZZLE_DEV_PROXY_API_PATH: "http://backend:8080/Plone"
+  #   volumes:
+  #   - ./src/addons:/app/src/addons
+  #   depends_on:
+  #     - backend
 
   backend:
     #build: ./eea-website-backend/
-    image: eeacms/eea-website-backend-devel
+    image: eeacms/eea.docker.plone-climateadapt:v9.105
     ports:
     - "${BACKEND:-8080}:8080"
-    environment:
-      SITE: "Plone"
     volumes:
-      - data:/data
-
+      - ./data:/data
+    mem_limit: 4294967296
+    mem_reservation: 4294967296
+    environment:
+      SITE: "cca"
+      TZ: Europe/Copenhagen
+      SERVER_NAME: climate-adapt.eea.europa.eu
+***REMOVED***
 volumes:
-  data: {}
