--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     volumes:
       - ./data:/data
       - ./backend/src:/plone/instance/src
+      - ./eea.docker.plone-climateadapt/buildout.cfg:/plone/instance/buildout.cfg
     mem_limit: 4294967296
     mem_reservation: 4294967296
     environment:
@@ -42,3 +43,5 @@ services:
       TZ: Europe/Copenhagen
       SERVER_NAME: climate-adapt.eea.europa.eu
 ***REMOVED***      CORS_ALLOW_ORIGIN: "http://localhost:3000"
+    depends_on:
+      - memcached
