--- a/package.json
+++ b/package.json
@@ -175,7 +175,9 @@
     "stylelint": "14.0.1",
     "stylelint-config-idiomatic-order": "8.1.0",
     "stylelint-config-prettier": "8.0.1",
-    "stylelint-prettier": "1.1.2"
+    "stylelint-prettier": "1.1.2",
+    "@cypress/code-coverage": "^3.10.0",
+    "cypress-fail-fast": "^5.0.1"
   },
   "packageManager": "yarn@3.2.3"
 }
