--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
-    "@eeacms/volto-cca-policy"
+    "@eeacms/volto-cca-policy",
+    "@eeacms/volto-eea-map"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -155,6 +156,7 @@
     "@eeacms/volto-cca-policy": "0.1.3",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.9",
     "@eeacms/volto-eea-kitkat": "10.5.0",
+    "@eeacms/volto-eea-map": "*",
     "@eeacms/volto-eea-website-theme": "1.5.0",
     "@plone/volto": "16.6.0",
     "volto-subsites": "4.0.0"
