--- a/package.json
+++ b/package.json
@@ -49,9 +49,8 @@
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
-    "@eeacms/volto-cca-policy",
     "@eeacms/volto-embed",
-    "@eeacms/volto-eea-map"
+    "@eeacms/volto-cca-policy"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -157,7 +156,6 @@
     "@eeacms/volto-cca-policy": "0.1.3",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.9",
     "@eeacms/volto-eea-kitkat": "10.5.0",
-    "@eeacms/volto-eea-map": "*",
     "@eeacms/volto-eea-website-theme": "1.5.0",
     "@eeacms/volto-embed": "*",
     "@plone/volto": "16.6.0",
