Add openlayers map

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,6 +12,9 @@
             ],
             "@eeacms/volto-embed": [
                 "addons/volto-embed/src"
+            ],
+            "@eeacms/volto-openlayers-map": [
+                "addons/volto-openlayers-map/src"
             ]
         },
         "baseUrl": "src"
