--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
+    "@eeacms/volto-eea-map",
     "@eeacms/volto-embed",
     "@eeacms/volto-cca-policy"
   ],
