--- a/jsconfig.json
+++ b/jsconfig.json
@@ -15,6 +15,9 @@
             ],
             "@eeacms/volto-openlayers-map": [
                 "addons/volto-openlayers-map/src"
+            ],
+            "@eeacms/volto-eea-map": [
+                "addons/volto-eea-map/src"
             ]
         },
         "baseUrl": "src"
