--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     command:
     - -m
     - '2048'
-    labels:
-      io.rancher.scheduler.affinity:host_label_ne: reserved=yes
+    # labels:
+    #   io.rancher.scheduler.affinity:host_label_ne: reserved=yes
 
   backend:
     #build: ./eea-website-backend/
