--- a/docker-compose.override-example.yml
+++ b/docker-compose.override-example.yml
@@ -1,4 +1,4 @@
 services:
   backend:
-    # build: ./eea.docker.plone-climateadapt
+    build: ./eea.docker.plone-climateadapt
     entrypoint: sh -c "tail -f /dev/null"
