--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   backend:
     #build: ./eea-website-backend/
     # image: eeacms/eea.docker.plone-climateadapt:v9.105
-    image: laszlocseh/climateadapt:10.0.0
+    image: eeacms/eea.docker.plone-climateadapt:latest
     ports:
     - "${BACKEND:-8080}:8080"
     volumes:
