--- a/package.json
+++ b/package.json
@@ -45,7 +45,12 @@
     "src/addons/*"
   ],
   "addons": [
-    "@eeacms/volto-cca-policy"
+    "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-embed",
+    "@eeacms/volto-eea-design-system",
+    "@eeacms/volto-eea-website-theme",
+    "@eeacms/volto-cca-policy",
+    "volto-subsites"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -145,14 +150,14 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.14"
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.2"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.1.5",
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.14",
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.2",
     "@eeacms/volto-eea-kitkat": "12.0.0",
     "@eeacms/volto-eea-website-theme": "1.8.2",
-    "@eeacms/volto-embed": "*",
+    "@eeacms/volto-embed": "5.0.1",
     "@plone/volto": "16.6.0",
     "volto-subsites": "4.0.0"
   },
