--- a/package.json
+++ b/package.json
@@ -150,11 +150,12 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.2"
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.3",
+    "@eeacms/volto-widget-theme-picker": "1.0.3"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.1.5",
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.2",
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.3",
     "@eeacms/volto-eea-kitkat": "12.0.1",
     "@eeacms/volto-eea-website-theme": "1.9.0",
     "@eeacms/volto-embed": "5.0.1",
