--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-embed",
+    "@eeacms/volto-openlayers-map",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-cca-policy",
@@ -156,6 +157,7 @@
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.1.5",
     "@eeacms/volto-eea-design-system": "1.0.0-beta.3",
+    "@eeacms/volto-openlayers-map": "*",
     "@eeacms/volto-eea-kitkat": "12.0.1",
     "@eeacms/volto-eea-website-theme": "1.9.0",
     "@eeacms/volto-embed": "5.0.1",
