--- a/package.json
+++ b/package.json
@@ -160,7 +160,7 @@
     "@eeacms/volto-eea-kitkat": "12.0.3",
     "@eeacms/volto-eea-website-theme": "1.9.1",
     "@eeacms/volto-embed": "5.0.1",
-    "@eeacms/volto-openlayers-map": "*",
+    "@eeacms/volto-openlayers-map": "0.2.2",
     "@plone/volto": "16.6.0",
     "volto-subsites": "4.0.0"
   },
