--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,3 +45,9 @@ services:
 ***REMOVED***      CORS_ALLOW_ORIGIN: "http://localhost:3000"
     depends_on:
       - memcached
+
+  converter:
+    image: eea/blocks-conversion-tool
+    ports:
+      - "8000:8000"
+
