--- a/converter/Dockerfile
+++ b/converter/Dockerfile
@@ -19,4 +19,4 @@ EXPOSE 8000
 
 # Start the application with Uvicorn
 # CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-CMD [docker-entrypoint.sh]
+CMD ["./docker-entrypoint.sh"]
