--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     - "${BACKEND:-8080}:8080"
     volumes:
       - ./data:/data
-      - ./backend/src:/plone/instance/src
-      - ./eea.docker.plone-climateadapt/buildout.cfg:/plone/instance/buildout.cfg
+      # - ./backend/src:/plone/instance/src
+      # - ./eea.docker.plone-climateadapt/buildout.cfg:/plone/instance/buildout.cfg
     # mem_limit: 4294967296
     # mem_reservation: 4294967296
     environment:
