--- a/package.json
+++ b/package.json
@@ -151,12 +151,12 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.4",
+    "@eeacms/volto-eea-design-system": "1.0.2",
     "@eeacms/volto-widget-theme-picker": "1.0.3"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.1.7",
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.4",
+    "@eeacms/volto-eea-design-system": "1.0.2",
     "@eeacms/volto-eea-kitkat": "13.0.0",
     "@eeacms/volto-eea-website-theme": "1.11.1",
     "@eeacms/volto-embed": "5.0.1",
