--- a/docker-compose.override-example.yml
+++ b/docker-compose.override-example.yml
@@ -5,6 +5,8 @@ services:
 
   converter:
     build: ./converter
+    volumes:
+      - ./converter/app:/app/app
     ports:
       - "8000:8000"
-    entrypoint: sh -c "tail -f /dev/null"
+    # entrypoint: sh -c "tail -f /dev/null"
