--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-workflow-progress",
+    "@eeacms/volto-nextcloud-video-block",
     "@eeacms/volto-cca-policy",
     "volto-subsites"
   ],
@@ -162,6 +163,7 @@
     "@eeacms/volto-eea-kitkat": "15.0.0",
     "@eeacms/volto-eea-website-theme": "1.13.0",
     "@eeacms/volto-embed": "5.0.2",
+    "@eeacms/volto-nextcloud-video-block": "0.3.0",
     "@eeacms/volto-openlayers-map": "0.2.2",
     "@eeacms/volto-workflow-progress": "3.1.0",
     "@plone/volto": "16.6.0",
