--- a/jsconfig.json
+++ b/jsconfig.json
@@ -18,6 +18,9 @@
             ],
             "@eeacms/volto-eea-map": [
                 "addons/volto-eea-map/src"
+            ],
+            "@eeacms/volto-nextcloud-video-block": [
+                "addons/volto-nextcloud-video-block/src"
             ]
         },
         "baseUrl": "src"
