--- a/package.json
+++ b/package.json
@@ -156,7 +156,8 @@
   "resolutions": {
     "@eeacms/volto-eea-design-system": "1.12.0",
     "@eeacms/volto-workflow-progress": "3.1.0",
-    "@eeacms/volto-widget-theme-picker": "1.1.0"
+    "@eeacms/volto-widget-theme-picker": "1.1.0",
+    "react-countup/countup.js": "2.5.0"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.1.18",
