--- a/jsconfig.json
+++ b/jsconfig.json
@@ -30,6 +30,9 @@
             ],
             "@eeacms/volto-openlayers-map": [
                 "addons/volto-openlayers-map/src"
+            ],
+            "@eeacms/volto-accordion-block": [
+                "addons/volto-accordion-block/src"
             ]
         },
         "baseUrl": "src"
