--- a/jsconfig.json
+++ b/jsconfig.json
@@ -33,6 +33,15 @@
             ],
             "@eeacms/volto-accordion-block": [
                 "addons/volto-accordion-block/src"
+            ],
+            "@eeacms/volto-widget-dataprovenance": [
+                "addons/volto-widget-dataprovenance/src"
+            ],
+            "@eeacms/volto-widget-temporal-coverage": [
+                "addons/volto-widget-temporal-coverage/src"
+            ],
+            "@eeacms/volto-widget-geolocation": [
+                "addons/volto-widget-geolocation/src"
             ]
         },
         "baseUrl": "src"
