--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "@eeacms/volto-eea-website-theme": "1.22.1",
     "@eeacms/volto-embed": "6.0.1",
     "@eeacms/volto-globalsearch": "^1.0.15",
+    "@eeacms/volto-listing-block": "6.0.0",
     "@eeacms/volto-nextcloud-video-block": "0.4.6",
     "@eeacms/volto-openlayers-map": "0.3.0",
     "@eeacms/volto-widget-dataprovenance": "0.4.1",
