--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@eeacms/volto-embed",
     "@eeacms/volto-openlayers-map",
     "@eeacms/volto-eea-design-system",
+    "@eeacms/volto-datablocks",
     "@eeacms/volto-globalsearch",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-eea-website-theme",
@@ -175,6 +176,7 @@
     "@eeacms/volto-eea-kitkat": "22.0.0",
     "@eeacms/volto-eea-website-theme": "1.28.2",
     "@eeacms/volto-embed": "9.1.1",
+    "@eeacms/volto-datablocks": "6.3.3",
     "@eeacms/volto-globalsearch": "^1.0.15",
     "@eeacms/volto-listing-block": "7.1.0",
     "@eeacms/volto-nextcloud-video-block": "0.4.8",
