--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "eea.docker.plone-climateadapt"]
 	path = eea.docker.plone-climateadapt
 	url = git@github.com:eea/eea.docker.plone-climateadapt.git
+[submodule "volto-blocks-converter"]
+	url = git@github.com:eea/volto-blocks-converter.git
+	branch = main
