--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "@eeacms/volto-eea-design-system": "1.23.6",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@eeacms/volto-widget-theme-picker": "2.0.0",
-    "@eeacms/volto-listing-block": "8.0.0",
+    "@eeacms/volto-listing-block": "7.1.0",
     "@eeacms/volto-block-style": "7.0.0",
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "d3-array": "^2.12.1"
@@ -174,11 +174,11 @@
     "@eeacms/volto-cca-policy": "0.2.8",
     "@eeacms/volto-datablocks": "7.0.0",
     "@eeacms/volto-eea-design-system": "1.23.6",
-    "@eeacms/volto-eea-kitkat": "24.0.1",
+    "@eeacms/volto-eea-kitkat": "^22.1.0",
     "@eeacms/volto-eea-website-theme": "1.33.2",
     "@eeacms/volto-embed": "10.0.0",
     "@eeacms/volto-globalsearch": "^1.0.15",
-    "@eeacms/volto-listing-block": "8.0.0",
+    "@eeacms/volto-listing-block": "^7.1.0",
     "@eeacms/volto-nextcloud-video-block": "1.0.0",
     "@eeacms/volto-openlayers-map": "0.3.2",
     "@eeacms/volto-searchlib": "1.0.0",
