--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "@eeacms/volto-datablocks": "7.0.0",
     "@eeacms/volto-eea-design-system": "1.23.6",
     "@eeacms/volto-eea-kitkat": "^22.1.0",
-    "@eeacms/volto-eea-website-theme": "1.33.2",
+    "@eeacms/volto-eea-website-theme": "^1.33.2",
     "@eeacms/volto-embed": "10.0.0",
     "@eeacms/volto-globalsearch": "^1.0.15",
     "@eeacms/volto-listing-block": "^7.1.0",
