--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "@eeacms/volto-eea-kitkat": "^22.1.0",
     "@eeacms/volto-eea-website-theme": "^1.33.2",
     "@eeacms/volto-embed": "10.0.0",
-    "@eeacms/volto-globalsearch": "^1.0.15",
+    "@eeacms/volto-globalsearch": "2.0.0",
     "@eeacms/volto-listing-block": "^7.1.0",
     "@eeacms/volto-nextcloud-video-block": "1.0.0",
     "@eeacms/volto-openlayers-map": "0.3.2",
