--- a/package.json
+++ b/package.json
@@ -166,7 +166,8 @@
     "@eeacms/volto-widget-theme-picker": "^1.1.5",
     "@eeacms/volto-listing-block": "^7.1.0",
     "@kitconcept/volto-blocks-grid": "7.0.2",
-    "d3-array": "^2.12.1"
+    "d3-array": "^2.12.1",
+    "@elastic/search-ui": "1.21.2"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "0.2.23",
