--- a/package.json
+++ b/package.json
@@ -166,10 +166,12 @@
     "@eeacms/volto-widget-theme-picker": "^1.1.5",
     "@eeacms/volto-listing-block": "^7.1.0",
     "@kitconcept/volto-blocks-grid": "7.0.2",
+    "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "d3-array": "^2.12.1",
     "@elastic/search-ui": "1.21.2"
   },
   "dependencies": {
+    "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "@eeacms/volto-cca-policy": "0.2.23",
     "@eeacms/volto-datablocks": "^6.4.1",
     "@eeacms/volto-eea-design-system": "1.23.7",
