--- a/package.json
+++ b/package.json
@@ -193,6 +193,7 @@
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
+    "bundlewatch": "0.3.3",
     "cypress-fail-fast": "^5.0.1",
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
