--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "d3-array": "^2.12.1",
+    "htmlparser2": "^7.2.0",
     "@elastic/search-ui": "1.21.2"
   },
   "dependencies": {
