--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-datablocks",
     "@eeacms/volto-embed",
     "@eeacms/volto-openlayers-map",
     "@eeacms/volto-eea-design-system",
@@ -164,6 +165,7 @@
     "@eeacms/volto-workflow-progress": "^4.1.1",
     "@eeacms/volto-widget-theme-picker": "^1.1.5",
     "@eeacms/volto-listing-block": "^7.1.0",
+    "@eeacms/volto-datablocks": "^7.2.5",
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "d3-array": "^2.12.1",
@@ -173,6 +175,7 @@
   "dependencies": {
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "@eeacms/volto-cca-policy": "0.2.71",
+    "@eeacms/volto-datablocks": "^7.2.5",
     "@eeacms/volto-eea-design-system": "1.33.1",
     "@eeacms/volto-eea-kitkat": "^24.0.1",
     "@eeacms/volto-eea-website-theme": "^1.33.2",
