--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -21,6 +21,10 @@
         "maxSize": "70kB"
       },
       {
+        "path": "build/public/static/js/sanitize-html*.js",
+        "maxSize": "85kB"
+      },
+      {
         "path": "build/public/static/js/client*.js",
         "maxSize": "1.85MB"
       }
