--- a/package.json
+++ b/package.json
@@ -168,7 +168,6 @@
     "@eeacms/volto-datablocks": "^7.2.5",
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
-    "@eeacms/volto-eea-website-theme": "^1.33.2",
     "d3-array": "^2.12.1",
     "htmlparser2": "^7.2.0",
     "@elastic/search-ui": "1.21.2"
@@ -179,7 +178,7 @@
     "@eeacms/volto-datablocks": "^7.2.5",
     "@eeacms/volto-eea-design-system": "1.34.1",
     "@eeacms/volto-eea-kitkat": "^24.0.1",
-    "@eeacms/volto-eea-website-theme": "^1.33.2",
+    "@eeacms/volto-eea-website-theme": "github:eea/volto-eea-website-theme#e21bee61e55e6c6b46d0119059f7a6063b0edad8",
     "@eeacms/volto-embed": "^9.1.1",
     "@eeacms/volto-globalsearch": "^1.1.0",
     "@eeacms/volto-listing-block": "^7.1.0",
