--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@eeacms/volto-widget-dataprovenance",
     "@eeacms/volto-accordion-block",
     "@eeacms/volto-cca-policy",
+    "@eeacms/volto-chatbot",
     "volto-subsites"
   ],
   "jest": {
@@ -169,6 +170,7 @@
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "@eeacms/volto-eea-website-theme": "<=1.35.0",
+    "@eeacms/volto-chatbot": "0.1.7",
     "d3-array": "^2.12.1",
     "htmlparser2": "^7.2.0",
     "@elastic/search-ui": "1.21.2"
@@ -176,6 +178,7 @@
   "dependencies": {
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "@eeacms/volto-cca-policy": "0.2.74",
+    "@eeacms/volto-chatbot": "0.1.7",
     "@eeacms/volto-datablocks": "^7.2.5",
     "@eeacms/volto-eea-design-system": "1.34.1",
     "@eeacms/volto-eea-kitkat": "^24.0.1",
