--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
     "@eeacms/volto-eea-website-theme": "<=1.35.0",
+    "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-chatbot": "0.1.11",
     "d3-array": "^2.12.1",
     "htmlparser2": "^7.2.0",
@@ -177,6 +178,7 @@
   },
   "dependencies": {
     "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
+    "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-cca-policy": "0.2.100",
     "@eeacms/volto-chatbot": "0.1.11",
     "@eeacms/volto-datablocks": "^7.2.5",
