Add volto.po locales files

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,10 @@
 {
     "compilerOptions": {
-        "paths": {},
+        "paths": {
+            "@eeacms/volto-cca-policy": [
+                "addons/volto-cca-policy/src"
+            ]
+        },
         "baseUrl": "src"
     }
 }
