--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,6 @@
 {
     "compilerOptions": {
-        "paths": {
-            "@eeacms/volto-cca-policy": [
-                "addons/volto-cca-policy/src"
-            ]
-        },
+        "paths": {},
         "baseUrl": "src"
     }
 }
