--- a/package.json
+++ b/package.json
@@ -173,6 +173,8 @@
     "@eeacms/volto-eea-website-theme": "<=1.35.0",
     "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-chatbot": "0.1.16",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "d3-array": "^2.12.1",
     "htmlparser2": "^7.2.0",
     "@elastic/search-ui": "1.21.2"
