--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "@eeacms/volto-eea-website-theme": "<=1.35.0",
     "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-chatbot": "0.1.16",
+    "@eeacms/volto-taxonomy": "5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "d3-array": "^2.12.1",
@@ -190,7 +191,6 @@
     "@eeacms/volto-eea-website-theme": "<=1.35.0",
     "@eeacms/volto-embed": "^9.1.1",
     "@eeacms/volto-listing-block": "^7.1.0",
-    "@eeacms/volto-openlayers-map": "0.3.2",
     "@eeacms/volto-workflow-progress": "^4.1.1",
     "@kitconcept/volto-blocks-grid": "7.0.2",
     "@plone/volto": "16.31.4",
