--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-chatbot": "0.1.18",
     "@eeacms/volto-taxonomy": "5.1.2",
+    "@eeacms/volto-globalsearch": "2.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "d3-array": "^2.12.1",
