--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -1,6 +1,10 @@
 {
   "files": [
     {
+      "path": "build/public/static/js/client*.js",
+      "maxSize": "1.85MB"
+    },
+    {
       "path": "build/public/static/js/*.js",
       "maxSize": "50kB"
     },
@@ -25,8 +29,8 @@
       "maxSize": "85kB"
     },
     {
-      "path": "build/public/static/js/client*.js",
-      "maxSize": "1.85MB"
+      "path": "build/public/static/js/ol*.js",
+      "maxSize": "1500kB"
     },
     {
       "path": "build/public/static/js/rehype-prism-plus*.js",
