--- a/.bundlewatch.config.json
+++ b/.bundlewatch.config.json
@@ -1,10 +1,6 @@
 {
   "files": [
     {
-      "path": "build/public/static/js/client*.js",
-      "maxSize": "1.85MB"
-    },
-    {
       "path": "build/public/static/js/*.js",
       "maxSize": "50kB"
     },
@@ -35,6 +31,10 @@
     {
       "path": "build/public/static/js/rehype-prism-plus*.js",
       "maxSize": "250kB"
+    },
+    {
+      "path": "build/public/static/js/client.*.chunk.js",
+      "maxSize": "1.5MB"
     }
   ]
 }
