--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
-    "patches": "/bin/bash patches/patchit.sh > /dev/null 2>&1 ||true",
+    "analyze": "BUNDLE_ANALYZE=true razzle build --noninteractive",
     "build": "razzle build --noninteractive",
-    "lint": "./node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx}'",
-    "lint:fix": "./node_modules/eslint/bin/eslint.js --max-warnings=0 --fix 'src/**/*.{js,jsx}'",
-    "lint:ci": "./node_modules/eslint/bin/eslint.js --max-warnings=0 -f checkstyle 'src/**/*.{js,jsx}' > eslint.xml",
+    "lint": "./node_modules/eslint/bin/eslint.js --max-warnings=0 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "./node_modules/eslint/bin/eslint.js --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:ci": "./node_modules/eslint/bin/eslint.js --max-warnings=0 -f checkstyle 'src/**/*.{js,jsx,ts,tsx}' > eslint.xml",
     "prettier": "./node_modules/.bin/prettier --single-quote --check 'src/**/*.{js,jsx,ts,tsx,css,scss}'",
     "prettier:fix": "./node_modules/.bin/prettier --single-quote --write 'src/**/*.{js,jsx,ts,tsx,css,scss}'",
     "prettier:ci": "./node_modules/.bin/prettier --single-quote --check 'src/**/*.{js,jsx,ts,tsx,css,scss}'",
-    "stylelint": "stylelint 'theme/**/*.{css,less}' 'src/**/*.{css,less}'",
-    "stylelint:overrides": "stylelint 'theme/**/*.overrides' 'src/**/*.overrides'",
+    "stylelint": "stylelint 'theme/**/*.{css,scss,less}' 'src/**/*.{css,scss,less}' --allow-empty-input",
+    "stylelint:overrides": "stylelint 'theme/**/*.overrides' 'src/**/*.overrides' --allow-empty-input",
     "stylelint:fix": "yarn stylelint --fix && yarn stylelint:overrides --fix",
     "test": "razzle test --passWithNoTests",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "cypress:run": "NODE_ENV=test cypress run",
     "cypress:open": "NODE_ENV=test cypress open",
     "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
@@ -44,6 +45,7 @@
   "workspaces": [
     "src/addons/*"
   ],
+  "theme": "@eeacms/volto-cca-policy",
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-datablocks",
@@ -69,8 +71,7 @@
     ],
     "transform": {
       "^.+\\.js(x)?$": "babel-jest",
-      "^.+\\.css$": "jest-css-modules",
-      "^.+\\.scss$": "jest-css-modules",
+      "^.+\\.ts(x)?$": "ts-jest",
       "^.+\\.(png)$": "jest-file",
       "^.+\\.(jpg)$": "jest-file",
       "^.+\\.(svg)$": "./node_modules/@plone/volto/jest-svgsystem-transform.js"
@@ -79,8 +80,12 @@
       "/node_modules/(?!@plone/volto).+\\.js$"
     ],
     "moduleNameMapper": {
+      "@plone/volto/cypress/(.*)$": "<rootDir>/node_modules/@plone/volto/cypress/$1",
+      "@plone/volto/addon-registry": "<rootDir>/node_modules/@plone/volto/addon-registry",
+      "@plone/volto/webpack-plugins/webpack-less-plugin": "<rootDir>/node_modules/@plone/volto/webpack-plugins/webpack-less-plugin",
       "@plone/volto/babel": "<rootDir>/node_modules/@plone/volto/babel",
       "@plone/volto/(.*)$": "<rootDir>/node_modules/@plone/volto/src/$1",
+      "@plone/volto-slate/(.*)$": "<rootDir>/node_modules/@plone/volto/packages/volto-slate/src/$1",
       "load-volto-addons": "<rootDir>/node_modules/@plone/volto/jest-addons-loader.js",
       "@package/(.*)$": "<rootDir>/src/$1",
       "~/(.*)$": "<rootDir>/src/$1"
@@ -120,20 +125,6 @@
     "plugins": [
       "stylelint-prettier"
     ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.less"
-        ],
-        "customSyntax": "postcss-less"
-      },
-      {
-        "files": [
-          "**/*.overrides"
-        ],
-        "customSyntax": "postcss-less"
-      }
-    ],
     "rules": {
       "prettier/prettier": true,
       "rule-empty-line-before": [
@@ -158,65 +149,59 @@
     "not dead"
   ],
   "engines": {
-    "node": "^14 || ^16 || ^18"
+    "node": "^18 || ^20"
   },
   "resolutions": {
-    "@eeacms/volto-cca-policy": "0.3.53",
-    "@eeacms/volto-eea-kitkat": "^24.0.1",
-    "@eeacms/volto-eea-design-system": "<=1.36.3",
-    "@eeacms/volto-workflow-progress": "^4.1.1",
-    "@eeacms/volto-widget-theme-picker": "^1.1.5",
-    "@eeacms/volto-listing-block": "^7.1.0",
-    "@eeacms/volto-datablocks": "^7.2.5",
     "@kitconcept/volto-blocks-grid": "7.0.2",
-    "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
-    "@eeacms/volto-eea-website-theme": "<=1.35.0",
-    "@eeacms/volto-call-to-action-block": "<=5.1.3",
-    "@eeacms/volto-chatbot": "0.1.20",
-    "@eeacms/volto-taxonomy": "5.1.2",
-    "@eeacms/volto-globalsearch": "2.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "d3-array": "^2.12.1",
     "htmlparser2": "^7.2.0",
+    "react-colorscales": "github:eea/react-colorscales#1.0.2",
+    "react-error-overlay": "6.0.9",
+    "eslint-plugin-jsx-a11y": "6.7.1",
     "@elastic/search-ui": "1.21.2"
   },
   "dependencies": {
-    "@eeacms/volto-block-style": "github:eea/volto-block-style#6.x.x",
-    "@eeacms/volto-call-to-action-block": "<=5.1.3",
     "@eeacms/volto-cca-policy": "0.3.53",
     "@eeacms/volto-chatbot": "0.1.20",
-    "@eeacms/volto-datablocks": "^7.2.5",
-    "@eeacms/volto-eea-design-system": "<=1.36.3",
-    "@eeacms/volto-eea-kitkat": "^24.0.1",
-    "@eeacms/volto-eea-website-theme": "<=1.35.0",
+    "@eeacms/volto-datablocks": "7.3.0",
+    "@eeacms/volto-eea-design-system": "1.36.6",
+    "@eeacms/volto-eea-kitkat": "27.1.1",
+    "@eeacms/volto-eea-website-theme": "3.6.1",
     "@eeacms/volto-embed": "^9.1.1",
-    "@eeacms/volto-listing-block": "^7.1.0",
-    "@eeacms/volto-workflow-progress": "^4.1.1",
+    "@eeacms/volto-globalsearch": "2.1.2",
+    "@eeacms/volto-workflow-progress": "5.0.0",
     "@kitconcept/volto-blocks-grid": "7.0.2",
-    "@plone/volto": "16.31.4",
+    "@plone/volto": "17.22.0",
     "volto-subsites": "4.0.0"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.10.0",
-    "@plone/scripts": "^2.1.2",
+    "@plone/scripts": "^3.3.2",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "6.7.0",
+    "@typescript-eslint/parser": "6.7.0",
+    "brotli-webpack-plugin": "1.1.0",
     "bundlewatch": "0.3.3",
-    "cypress-fail-fast": "^5.0.1",
+    "compression-webpack-plugin": "10.0.0",
     "eslint-plugin-prettier": "3.1.3",
     "jest-junit": "8.0.0",
     "mrs-developer": "*",
-    "postcss": "8.3.11",
-    "prettier": "2.0.5",
-    "razzle": "4.2.17",
-    "stylelint": "14.0.1",
-    "stylelint-config-idiomatic-order": "8.1.0",
-    "stylelint-config-prettier": "8.0.1",
-    "stylelint-prettier": "1.1.2"
+    "postcss": "8.4.13",
+    "prettier": "3.0.3",
+    "razzle": "4.2.18",
+    "stylelint": "15.10.3",
+    "stylelint-config-idiomatic-order": "9.0.0",
+    "stylelint-prettier": "4.0.2",
+    "ts-jest": "^26.4.2",
+    "ts-loader": "9.4.4",
+    "typescript": "5.2.2"
   },
   "packageManager": "yarn@3.2.3"
 }
