--- a/package.json
+++ b/package.json
@@ -169,7 +169,7 @@
     "@eeacms/volto-eea-design-system": "1.36.6",
     "@eeacms/volto-eea-kitkat": "27.1.1",
     "@eeacms/volto-eea-website-theme": "3.6.1",
-    "@eeacms/volto-embed": "^9.1.1",
+    "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@kitconcept/volto-blocks-grid": "7.0.2",
