--- a/package.json
+++ b/package.json
@@ -159,6 +159,7 @@
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "@elastic/search-ui": "1.21.2"
   },
   "dependencies": {
