--- a/package.json
+++ b/package.json
@@ -174,7 +174,9 @@
     "react-error-overlay": "6.0.9",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react-hooks": "4.6.0",
-    "@elastic/search-ui": "1.21.2"
+    "@elastic/search-ui": "1.21.2",
+    "@eeacms/volto-datablocks": "7.3.3",
+    "@eeacms/volto-group-block": "7.1.1"
   },
   "dependencies": {
     "@eeacms/volto-cca-policy": "github:eea/volto-cca-policy#1.0.0-alpha.1",
