--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@eeacms/volto-widget-dataprovenance",
     "@eeacms/volto-accordion-block",
     "@eeacms/volto-cca-policy",
+    "@eeacms/volto-plotlycharts",
     "@eeacms/volto-chatbot",
     "volto-subsites"
   ],
@@ -190,6 +191,7 @@
     "@eeacms/volto-embed": "10.1.3",
     "@eeacms/volto-globalsearch": "2.1.2",
     "@eeacms/volto-matomo": "6.0.1",
+    "@eeacms/volto-plotlycharts": "13.0.6",
     "@eeacms/volto-workflow-progress": "5.0.1",
     "@plone/volto": "17.22.0",
     "volto-subsites": "4.0.0"
