update package.json: use staging branch

--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
   },
   "dependencies": {
     "@eeacms/volto-call-to-action-block": "5.2.0",
-    "@eeacms/volto-cca-policy": "0.3.101",
+    "@eeacms/volto-cca-policy": "github:eea/volto-cca-policy#staging",
     "@eeacms/volto-chatbot": "^0.6.1",
     "@eeacms/volto-datablocks": "7.3.4",
     "@eeacms/volto-eea-design-system": "1.40.2",
